springboot-demoapp-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "springboot-demoapp-bff-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: springboot-demoapp-bff
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "springboot-demoapp-bff-service"
              servicePort: 8080
